...
    "World 1の最深部へ" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Into the depths of World 1"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "World 1の最深部へ"
...
    "最初の宝石を見つけよう" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Find your first gem"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "最初の宝石を見つけよう"
...
    "設定" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "設定"
...
    "購入を復元" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restore Purchases"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "購入を復元"
...
    "閉じる" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "閉じる"
...
